removed extra % symbols from controllers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
         expose:
             -   "9000"
     db:
-        image: 'postgres:14'
+        image: 'postgres:15-alpine'
         ports:
             - "${FORWARD_DB_PORT:-5432}:5432"
         environment:
